--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
           <div id="username">
             anonymous
           </div>
-          <img id="user-img"
+          <img
+            id="user-img"
             src="https://sophosnews.files.wordpress.com/2014/04/anonymous-250.jpg?w=250"
             alt=""
             class="img-content"
